# GreyPawnChess

./: .gitignore  README.md  binding.gyp  index.js  package-lock.json  package.json
addon/: README.md  binding.gyp  index.js  interactive.js  package-lock.json  package.json  tournament.js
addon/engine/: Board.h  BoardFuncs.h  GameState.h
addon/engine/src/: Board.cpp  Board.h  BoardEvaluator.cpp  BoardEvaluator.h  BoardFuncs.cpp  BoardFuncs.h  GameState.h  GreyPawnChess.cpp  GreyPawnChess.h  MonteCarloNode.cpp  MonteCarloNode.h  MonteCarloTree.cpp  MonteCarloTree.h  Move.cpp  Move.h  PGNParsing.cpp  PGNParsing.h  Piece.h  Random.cpp  Random.h  ScopedProfiler.h  StringUtil.cpp  StringUtil.h  TimeManagement.cpp  TimeManagement.h  ZobristHash.cpp  ZobristHash.h
addon/engine/src/MonteCarloStrategy/: MonteCarloNode.cpp  MonteCarloNode.h  MonteCarloStrategy.cpp  MonteCarloStrategy.h
addon/engine/src/RandomStrategy/: RandomStrategy.cpp  RandomStrategy.h
addon/engine/test/: BoardFuncsTest.cpp  BoardTest.cpp  CMakeLists.txt  GameStateTest.cpp  GreyPawnChessTest.cpp  MonteCarloNodeTest.cpp  MoveTest.cpp  PieceTest.cpp  ZobristHashTest.cpp
addon/napi/: chessAddon.cpp
lichess-bot/: README.md  index.js  lichess.config.example  package-lock.json  package.json
src/: Board.cpp  Board.h  BoardFuncs.cpp  BoardFuncs.h  GameState.cpp  GameState.h  GreyPawnChess.h  Move.cpp  Move.h  Piece.h  Square.h  chessAddon.cpp  greypawnchess.cpp
